--- a/OXO.html
+++ b/OXO.html
@@ -145,65 +145,110 @@
 </style>
 
 <script>
-var game;
-function makeOXO(n) {
-  game = new OXO(n);
+class OXOboard {
+  constructor(n) {
+    this.game = new OXO(n);
+    this.hash = "#";
 
-  var root = document.createElement("div");
-  root.classList.add("root");
-  root.innerHTML = "<span id='Oscore' style='color:blue;'>0</span><span>-</span><span id='Xscore' style='color:red;'>0</span>";
+    this.root = document.createElement("div");
+    this.root.classList.add("root");
+    this.root.innerHTML = `<span id='Oscore' style='color:blue;'>0</span><span>-</span><span id='Xscore' style='color:red;'>0</span>`;
 
-  var board = "<div class='grid'></div>";
-  for ( let i=0; i<n; i++ )
-    board = `
-      <table id='OXO' class='board'>
-        <tr>
-          <td>${board}</td>
-          <td>${board}</td>
-          <td>${board}</td>
-        </tr>
-        <tr>
-          <td>${board}</td>
-          <td>${board}</td>
-          <td>${board}</td>
-        </tr>
-        <tr>
-          <td>${board}</td>
-          <td>${board}</td>
-          <td>${board}</td>
-        </tr>
-      </table>
+    var board = "<div class='grid'></div>";
+    for ( let i=0; i<n; i++ )
+      board = `
+        <table id='OXO' class='board'>
+          <tr>
+            <td>${board}</td>
+            <td>${board}</td>
+            <td>${board}</td>
+          </tr>
+          <tr>
+            <td>${board}</td>
+            <td>${board}</td>
+            <td>${board}</td>
+          </tr>
+          <tr>
+            <td>${board}</td>
+            <td>${board}</td>
+            <td>${board}</td>
+          </tr>
+        </table>
+      `;
+    this.root.innerHTML += `<table><tr><td class='board-container'>${board}</td></tr></table>`;
+    this.root.querySelector(".board").classList.add("O");
+
+    this.root.innerHTML += `
+      <details class='history'>
+        <summary>History</summary>
+        <a href='#' class='reset'>reset</a>
+      </details>
     `;
-  root.innerHTML += `<table><tr><td class='board-container'>${board}</td></tr></table>`;
-  root.querySelector(".board").classList.add("O");
 
-  root.innerHTML += `
-    <details class='history'>
-      <summary>History</summary>
-      <a href='#' class='reset'>reset</a>
-    </details>
-  `;
+    this.root.addEventListener("click", event => {
+      var target = event.target.nodeType===Node.TEXT_NODE ? event.target.parentNode : event.target;
+      if ( !target.matches(".grid:not(.O):not(.X)") )
+        return;
+      this.set(target);
+    });
 
-  var hash = "#";
+    var prev_target;
+    this.root.addEventListener("mouseover", event => {
+      var target = event.target.nodeType===Node.TEXT_NODE ? event.target.parentNode : event.target;
+      if ( prev_target===target || !target.matches(".grid") )
+        return;
 
-  function entries(board) {
+      var board = target.closest(".board");
+      var A, B;
+      if ( board.matches(".O") || board.matches(".root .board-container>.board.O .board") )
+        [A, B] = ["O", "X"];
+      else if ( board.matches(".X") || board.matches(".root .board-container>.board.X .board") )
+        [A, B] = ["X", "O"];
+      else
+        return;
+
+      for ( let board of this.root.querySelectorAll(".board.Oready") )
+        board.classList.remove("Oready");
+      for ( let board of this.root.querySelectorAll(".board.Xready") )
+        board.classList.remove("Xready");
+
+      var next = target.next;
+      if ( !next.querySelector(".grid:not(.O):not(.X):not(:hover)") )
+        next = this.root.querySelector(".board");
+      next.classList.add(`${B}ready`);
+    });
+
+    for ( let grid of this.root.querySelectorAll(".grid") ) {
+      let index = [];
+      let sub, target = grid;
+      while ( sub = target.parentNode.closest(".board") ) {
+        index.unshift(this.entries(sub).indexOf(target));
+        target = sub;
+      }
+      grid.index = index;
+      grid.next = this.get(index.slice(1));
+    }
+
+
+    window.addEventListener("hashchange", event => {
+      if ( this.hash != (window.location.hash || "#") )
+        this.reload(window.location.hash.substr(1));
+    });
+  }
+
+  entries(board) {
     return [...board.querySelectorAll(":scope>tbody>tr>td>*:not(.Owin):not(.Xwin)")];
   }
-  function get(index) {
-    var board = root.querySelector(".board");
+  get(index) {
+    var board = this.root.querySelector(".board");
     if ( index ) {
       index = index.slice();
       while ( index.length )
-        board = entries(board)[index.shift()];
+        board = this.entries(board)[index.shift()];
     }
     return board;
   }
-
-  root.addEventListener("click", function(event) {
-    var target = event.target.nodeType===Node.TEXT_NODE ? event.target.parentNode : event.target;
-    if ( !target.matches(".grid:not(.O):not(.X)") )
-      return;
-
+  set(target) {
     var board = target.closest(".board");
     var A, B;
     if ( board.matches(".O") || board.matches(".root .board-container>.board.O .board") )
@@ -213,35 +258,83 @@ function makeOXO(n) {
     else
       return;
 
-    var res = game.move(target.index);
+    var res = this.game.move(target.index);
     if ( !res )
       return;
     target.classList.add(A);
 
-    addHistory(target.index, A);
-    window.location.hash = hash;
+    this.addHistory(target.index, A);
+    window.location.hash = this.hash;
 
     for ( let [index, num] of res )
-      addLine(index, num, A);
+      this.addLine(index, num, A);
 
-    updateRegion(game.preindex, B);
-  });
+    this.updateRegion(this.game.preindex, B);
 
-  function addHistory(index, who) {
-    if ( hash == "#" )
-      hash = hash + index.join(",");
+    this.root.dispatchEvent(new Event("statechanged"));
+  }
+  reset() {
+    this.root.querySelector("#Oscore").innerHTML = "0";
+    this.root.querySelector("#Xscore").innerHTML = "0";
+
+    for ( let record of [...this.root.querySelectorAll(".history .record")] )
+      record.parentNode.removeChild(record);
+
+    for ( let grid of [...this.root.querySelectorAll(".grid.O")] )
+      grid.classList.remove("O");
+    for ( let grid of [...this.root.querySelectorAll(".grid.X")] )
+      grid.classList.remove("X");
+
+    for ( let win of [...this.root.querySelectorAll(".Owin")] )
+      win.parentNode.removeChild(win);
+    for ( let win of [...this.root.querySelectorAll(".Xwin")] )
+      win.parentNode.removeChild(win);
+
+    for ( let board of this.root.querySelectorAll(".board.O") )
+      board.classList.remove("O");
+    for ( let board of this.root.querySelectorAll(".board.X") )
+      board.classList.remove("X");
+    let board = this.root.querySelector(".board").classList.add("O");
+
+    this.hash = "#";
+    this.game.reset();
+  }
+  reload(records) {
+    this.reset();
+
+    this.game.load(records, false);
+
+    if ( records != "" ) {
+      for ( let [n, index] of this.game.history.entries() ) {
+        this.get(index).classList.add(n%2==0?"O":"X");
+        this.addHistory(this.game.history[n], n%2==0?"O":"X");
+      }
+
+      for ( let [index, num] of this.game.computeScores( 1) )
+        this.addLine(index, num, "O");
+      for ( let [index, num] of this.game.computeScores(-1) )
+        this.addLine(index, num, "X");
+
+      this.updateRegion(this.game.preindex, this.game.who==1?"O":"X");
+    }
+    window.location.hash = this.hash;
+  }
+
+  addHistory(index, who) {
+    if ( this.hash == "#" )
+      this.hash = this.hash + index.join(",");
     else
-      hash = hash + "-" + index.join(",");
+      this.hash = this.hash + "-" + index.join(",");
 
     var record = document.createElement("a");
     record.innerHTML = index.join(",");
     record.classList.add("record");
     record.classList.add(who);
-    record.href = hash;
-    root.querySelector(".history").appendChild(record);
+    record.href = this.hash;
+    this.root.querySelector(".history").appendChild(record);
   }
-  function addLine(index, num, who) {
-    let board = get(index);
+  addLine(index, num, who) {
+    let board = this.get(index);
 
     var line = document.createElement("div");
     line.classList.add(`${who}win`);
@@ -251,108 +344,36 @@ function makeOXO(n) {
     var score = document.getElementById(`${who}score`);
     score.innerHTML = parseInt(score.innerHTML)+1;
   }
-  function updateRegion(index, who) {
-    for ( let board of root.querySelectorAll(".board.O") )
+  updateRegion(index, who) {
+    for ( let board of this.root.querySelectorAll(".board.O") )
       board.classList.remove("O");
-    for ( let board of root.querySelectorAll(".board.X") )
+    for ( let board of this.root.querySelectorAll(".board.X") )
       board.classList.remove("X");
 
-    get(index).classList.add(who);
+    this.get(index).classList.add(who);
   }
 
-  var prev_target;
-  root.addEventListener("mouseover", function(event) {
-    var target = event.target.nodeType===Node.TEXT_NODE ? event.target.parentNode : event.target;
-    if ( prev_target===target || !target.matches(".grid") )
-      return;
-
-    var board = target.closest(".board");
-    var A, B;
-    if ( board.matches(".O") || board.matches(".root .board-container>.board.O .board") )
-      [A, B] = ["O", "X"];
-    else if ( board.matches(".X") || board.matches(".root .board-container>.board.X .board") )
-      [A, B] = ["X", "O"];
-    else
-      return;
-
-    for ( let board of root.querySelectorAll(".board.Oready") )
-      board.classList.remove("Oready");
-    for ( let board of root.querySelectorAll(".board.Xready") )
-      board.classList.remove("Xready");
-
-    var next = target.next;
-    if ( !next.querySelector(".grid:not(.O):not(.X):not(:hover)") )
-      next = root.querySelector(".board");
-    next.classList.add(`${B}ready`);
-  });
-
-  for ( let grid of root.querySelectorAll(".grid") ) {
-    let index = [];
-    let sub, target = grid;
-    while ( sub = target.parentNode.closest(".board") ) {
-      index.unshift(entries(sub).indexOf(target));
-      target = sub;
-    }
-    grid.index = index;
-    grid.next = get(index.slice(1));
-  }
-
-  function reset() {
-    root.querySelector("#Oscore").innerHTML = "0";
-    root.querySelector("#Xscore").innerHTML = "0";
-
-    for ( let record of [...root.querySelectorAll(".history .record")] )
-      record.parentNode.removeChild(record);
-
-    for ( let grid of [...root.querySelectorAll(".grid.O")] )
-      grid.classList.remove("O");
-    for ( let grid of [...root.querySelectorAll(".grid.X")] )
-      grid.classList.remove("X");
-
-    for ( let win of [...root.querySelectorAll(".Owin")] )
-      win.parentNode.removeChild(win);
-    for ( let win of [...root.querySelectorAll(".Xwin")] )
-      win.parentNode.removeChild(win);
-
-    for ( let board of root.querySelectorAll(".board.O") )
-      board.classList.remove("O");
-    for ( let board of root.querySelectorAll(".board.X") )
-      board.classList.remove("X");
-    let board = root.querySelector(".board").classList.add("O");
-
-    hash = "#";
-    game.reset();
-  }
-  function reload(records) {
-    reset();
-
-    game.load(records, false);
-
-    if ( records != "" ) {
-      for ( let [n, index] of game.history.entries() ) {
-        get(index).classList.add(n%2==0?"O":"X");
-        addHistory(game.history[n], n%2==0?"O":"X");
-      }
-
-      for ( let [index, num] of game.computeScores( 1) )
-        addLine(index, num, "O");
-      for ( let [index, num] of game.computeScores(-1) )
-        addLine(index, num, "X");
-
-      updateRegion(game.preindex, game.who==1?"O":"X");
-    }
-    window.location.hash = hash;
-  }
-
-  window.addEventListener("hashchange", function(event) {
-    if ( hash != (window.location.hash || "#") )
-      reload(window.location.hash.substr(1));
-  });
-
-  return root;
 }
 
-window.onload = () => document.body.appendChild(makeOXO(parseInt(new URLSearchParams(window.location.search).get("n")) || 1));
+window.onload = () => {
+  var query = new URLSearchParams(window.location.search);
+  var n = parseInt(query.get("n")) || 1;
+
+  var board = new OXOboard(n);
+  document.body.appendChild(board.root);
+
+  if ( query.has("level") ) {
+    var AI = new AIdiot(n, parseInt(query.get("level")));
+    board.root.addEventListener("statechanged", event => {
+      if ( board.game.who == -1 ) {
+        let index = AI.predict(board.game);
+        if ( !index )
+          return;
+        board.set(board.get(index));
+      }
+    });
+  }
+};
 </script>
 
 </head>
